base/023-sync/fuse-023-sync-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  creationTimestamp: ~
  labels: 
    app: sync
  name: sync
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: sync
  strategy: {}
  template: 
    metadata: 
      creationTimestamp: ~
      labels: 
        app: sync
    spec: 
      containers: 
        - 
          securityContext:
            privileged: false
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: File
          image: "docker.prospecta.com/prospecta/mdo-sync:development"
          name: sync
          ports:
            - name: spring-port
              containerPort: 8080
              protocol: TCP
          resources: {}
      securityContext: {}
      imagePullSecrets:
        - name: nexus-image-pull
---
