base/023-sync/fuse-023-sync-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: rule
  name: rule
spec:
  host: "rule-development.apps.ocp.virt.prospecta.com.au"
  port:
    targetPort: 8080
  to:
    kind: Service
    name: rule
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status: {}
